--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -34,9 +34,9 @@
     {{outlet}}
 
     <!-- Toolbar -->
-    {{#app-toolbar}}
+    {{!-- {{#app-toolbar}}
       {{#link-to 'gyro'}}Start{{/link-to}}
-    {{/app-toolbar}}
+    {{/app-toolbar}} --}}
 
   </div>
 
