--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -6,6 +6,9 @@
         <p>Join the <strong>bayzat</strong> competition and stay health! Reach minimum 8000 steps per day and <u>decrease</u> the price of your <a href="https://bayzat.com/health-insurance">Health Insurance</a>.</p>
       </div>
     </div>
+
+    {{#app-gyro}}{{/app-gyro}}
+
     <div class="content-block-title">History</div>
     <div class="content-block">
       <div class="row">
@@ -34,7 +37,7 @@
           {{/link-to}}
         </li>
         <li>
-          {{#link-to "settings" class="item-link"}}
+          {{#link-to "settings" class="item-link disabled"}}
             <div class="item-content">
               <div class="item-inner">
                 <div class="item-title">Settings</div>
