--- a/client/app/templates/components/app-gyro.hbs
+++ b/client/app/templates/components/app-gyro.hbs
@@ -1,10 +1,28 @@
 <div class="content-block-title">Counter</div>
 <div class="content-block">
-  <span class="button button-big button-round active">{{steps}}</span>
+  <span class="button button-big" {{action "stopTracking"}}>{{steps}}</span>
 </div>
 <div class="content-block-title">Measurements</div>
 <div class="list-block">
   <ul>
+    <li class="item-content">
+      <div class="item-inner">
+        <div class="item-title">Direction</div>
+        <div class="item-after"><span class="badge">{{gyro.direction}}</span></div>
+      </div>
+    </li>
+    <li class="item-content">
+      <div class="item-inner">
+        <div class="item-title">Tilt Front-Back</div>
+        <div class="item-after"><span class="badge">{{gyro.tiltFrontBack}}</span></div>
+      </div>
+    </li>
+    <li class="item-content">
+      <div class="item-inner">
+        <div class="item-title">Tilt Left-Right</div>
+        <div class="item-after"><span class="badge">{{gyro.tiltLeftRight}}</span></div>
+      </div>
+    </li>
     <li class="item-content">
       <div class="item-inner">
         <div class="item-title">X</div>
