--- a/client/app/templates/about.hbs
+++ b/client/app/templates/about.hbs
@@ -8,13 +8,13 @@
     <div class="list-block">
       <ul>
         <li class="item-content">
-          <a href="mailto:taras@bayzat.com">taras@bayzat.com</a>
+          <a href="mailto:taras@bayzat.com">Taras Bezdetniy</a>
         </li>
         <li class="item-content">
-            <a href="mailto:michal@bayzat.com">kepek@bayzat.com</a>
+            <a href="mailto:michal@bayzat.com">Michal Kesicki</a>
         </li>
         <li class="item-content">
-          <a href="mailto:kepek@bayzat.com">kepek@bayzat.com</a>
+          <a href="mailto:kepek@bayzat.com">Michal Kechner</a>
         </li>
       </ul>
     </div>
