--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -13,12 +13,12 @@
     <div class="content-block">
       <div class="row">
         <div class="col-50">
-          {{#link-to "history" (query-params date=yesterdayDate) class="button open-panel disabled"}}
+          {{#link-to "history" (query-params date=yesterdayDate) class="button disabled"}}
             Yesterday
           {{/link-to}}
         </div>
         <div class="col-50">
-          {{#link-to "history" (query-params date=todayDate) class="button open-panel"}}
+          {{#link-to "history" (query-params date=todayDate) class="button"}}
             Today
           {{/link-to}}
         </div>
